# forge-containers

./: .gitignore  CMakeLists.txt  README.md
Docs/: Forge Containers.md  Todo.md
Source/Private/: AbstractCollection.inl  AbstractCollection_inl.hpp  AbstractIterator.inl  AbstractIterator_inl.hpp
Source/Private/Collections/: DynamicArray.cpp  DynamicArray.inl  StaticArray.cpp  StaticArray.inl  StaticQueue.cpp  StaticStack.cpp  StaticStack.inl
Source/Private/Memory/: Allocator_inl.hpp  MemoryUtilities_inl.hpp
Source/Private/Memory/Policies/: HeapAllocationPolicy_inl.hpp  NoAllocationPolicy_inl.hpp
Source/Public/: AbstractCollection.hpp  AbstractIterator.hpp  AbstractSequencedCollection.hpp  Compiler.hpp  IIterable.hpp  Macros.hpp
Source/Public/Collections/: DynamicArray.hpp  StaticArray.hpp  StaticQueue.hpp  StaticStack.hpp
Source/Public/Memory/: Allocator.hpp  MemoryUtilities.hpp
Source/Public/Memory/Policies/: HeapAllocationPolicy.hpp  IAllocationPolicy.hpp  NoAllocationPolicy.hpp
Tests/: CMakeLists.txt  StaticArrayTest.hpp  main.cpp
